--- a/map/src/css/Map.css
+++ b/map/src/css/Map.css
@@ -5,8 +5,14 @@
 }
 #root {
   height: 100vh;
+  padding: 100px;
+  width: 100%;
+  height: 40%;
 }
 /* sizing of map leaflet*/
 .leaflet-container {
   height: 100vh;
+}
+.mappaContainer {
+  padding: 100px;
 }
