--- a/map/src/css/Map.css
+++ b/map/src/css/Map.css
@@ -3,11 +3,10 @@
   margin: 0;
   padding: 0;
 }
-/* #root {
-  height: 100vh;
-  padding: 40px;
-  width: 100%;
-} */
+#root {
+  background: rgb(0, 123, 196);
+  background: linear-gradient(180deg, rgba(0, 123, 196, 1) 0%, rgba(53, 147, 27, 1) 100%, rgba(255, 255, 255, 1) 100%);
+}
 /* sizing of map leaflet*/
 .leaflet-container {
   height: 100vh;
