--- a/map/src/css/App.css
+++ b/map/src/css/App.css
@@ -1,6 +1,17 @@
 .aside-container {
-  height: 100%;
+  height: 730px;
+
   overflow-y: scroll;
   scrollbar-color: rgba(26, 31, 57, 0.2) transparent;
   scrollbar-width: thin;
 }
+/* @media (max-width: 991px) {
+  .row {
+    width: 150%;
+  }
+}
+@media (max-width: 767px) {
+  .row {
+    width: 100%;
+  }
+} */
