--- a/map/src/css/InfoCamp.css
+++ b/map/src/css/InfoCamp.css
@@ -1,3 +1,25 @@
 .InfoContainer {
   height: 100vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.InfoContent {
+  flex: 1;
+  margin-right: 20px;
+}
+
+.MapContainer {
+  flex: 1;
+  height: 400px;
+}
+
+.text-white {
+  margin: 0 10px;
+}
+@media (max-width: 768px) {
+  .map-container {
+    display: none;
+  }
 }
