add env file and modify homepage

--- a/map/src/css/Homepage.css
+++ b/map/src/css/Homepage.css
@@ -1,1 +1,9 @@
+.custom-link {
+  color: inherit;
+  text-decoration: none;
+}
 
+.custom-link:hover {
+  color: inherit;
+  text-decoration: none;
+}
