--- a/map/src/css/HomepageCarousel.css
+++ b/map/src/css/HomepageCarousel.css
@@ -1,11 +1,24 @@
 .shadow-text {
-  text-shadow: 20px 20px 40px rgba(0, 0, 0, 0.5);
+  text-shadow: 2px 0px 0px rgba(0, 0, 0, 0.5);
   font-weight: 700;
-  background-color: rgba(0, 0, 0, 0.26);
+  font-size: 120%;
   border-radius: 50px;
+}
+@media (max-width: 768px) {
+  .shadow-text {
+    text-shadow: 2px 0px 0px rgba(0, 0, 0, 0.5);
+    font-weight: 700;
+    font-size: 48%;
+    border-radius: 50px;
+  }
 }
 
 .carosello {
-  margin-right: 40%;
-  margin-left: 25%;
+  margin-right: auto;
+  margin-left: auto;
+}
+.card-img {
+  width: 100%;
+  height: 250px;
+  object-fit: cover;
 }
