--- a/map/src/css/Login.css
+++ b/map/src/css/Login.css
@@ -15,11 +15,5 @@
   display: none;
 }
 .dropstart .dropdown-toggle::before {
-  display: inline-block;
-  margin-right: 0.255em;
-  vertical-align: 0.255em;
-
-  border-top: 0.3em solid transparent;
-  border-right: 0.3em solid;
-  border-bottom: 0.3em solid transparent;
+  content: unset !important;
 }
